styles.css
/* ... */
.forumng-info {
    position: relative;
    padding-right: 16px;
}
.forumng-info .forumng-flag {
    position: absolute;
    right: -0.5em;
}

.forumng-deleted .forumng-pic,
.forumng-deselected .forumng-pic{
    opacity:0.5;
    filter: alpha(opacity=50);
}
.forumng-deleted .forumng-info,
.forumng-deleted .forumng-summary .forumng-text,
.forumng-deleted .forumng-message,
.forumng-deleted .forumng-subject,
.forumng-deselected .forumng-info,
.forumng-deselected .forumng-summary .forumng-text,
.forumng-deselected .forumng-message,
.forumng-deselected .forumng-subject {
    color: #888;
}
.forumng-deselected a:link,
.forumng-deselected a:active,
.forumng-deselected a:visited,
.forumng-deselected a:hover {
    color: #7f98b2;
}

.forumng-summary .forumng-text {
    display:inline;
}

.forumng-info {
    font-size:0.85em;
}
.forumng-subject {
    margin-top:0.5em;
    word-break: break-word;
}
h3.forumng-subject {
    font-size:1em;
    margin-top:0.5em;
    margin-bottom:0;
}
.forumng-summary h3 {
    font-size:1em;
    margin:0;
    display:inline;
}
.forumng-summary {
    margin-top:0.5em;
}
.forumng-postmain {
    margin-left:35px;
    padding-left:0.5em;
    padding-top:0.5em;
}
.forumng-postfooter {
    margin:0.5em 0 0;
    text-align:right;
}
/* Hide buttons if copied into message */
.forumng-message .forumng-postfooter, .forumng-message .forumng-commands,
.forumng-message .forumng-expandcontainer {
    display: none;
}

ul.forumng-commands {
    display: inline-block;
    margin: 0;
    padding: 0;
    white-space: nowrap;
}
.ie7 ul.forumng-commands {
    display: inline;
}
ul.forumng-commands li {
    display:inline;
    list-style-type:none;
    margin:0 0 0 2em;
    padding:0;
    position: relative;
}
ul.forumng-commands li {
    font-size: 0.85em;
}
ul.forumng-commands li.forumng-replylink {
    font-size: 1.0em;
}
.forumng-endpost {
    clear:left;
}

.forumng-post.forumng-important {
    background-color: #F0E1B3;
}

.forumng-post.forumng-read {
    color:#222;
}
.forumng-post.forumng-unread {
    background: #FFD991;
}

.forumng-post.forumng-unread .forumng-info {
    font-weight: bold;
}

.forumng-lockmessage .forumng-post {
    background: #FFBBBB;
    margin-bottom: 2em;
}

.forumng-attachments {
    display: block;
    text-align:right;
    font-size: 0.85em;
    margin: 0 0 0.5em;
    padding: 0;
}
.forumng-attachments li {
    display:inline;
    list-style-type:none;
    margin:0 0 0 2em;
}
.forumng-attachments li a {
    white-space: nowrap;
}
.forumng-attachments a:link,
.forumng-attachments a:visited,
.forumng-attachments a:hover {
    text-decoration: none;
}
.forumng-attachments img {
    vertical-align: -4px;
}
.forumng-attachments a:hover span {
    text-decoration: underline;
}


#forumng-expandall {
    text-align:right;
    margin-bottom:0.5em;
}

#forumng-saveallratings {
    font-size:0.85em;
}

.forumng-deleted-discussion .forumng-post {
    color: #888;
}

.forumng-bad-browser {
    font-size: 0.85em;
    margin-top: 2em;
}

.forumng-bad-browser h3 {
    display: inline;
    margin: 0;
    font-size: 1em;
}

.forumng-bad-browser p {
    display: inline;
    margin: 0;
}

.forumng-selectmode {
    background: #eee;
    padding: 0.5em 0 0;
}
.forumng-selectmode .forumng-feedlinks,
.forumng-selectmode #forumng-arrowback,
.forumng-selectmode .forumng-info .forumng-flag,
.forumng-selectmode .forumng-edit {
    display:none;
}

.forumng-selectintro {
    padding: 0.5em 0 0;
    margin: 0 0 1em;
}
.forumng-selectoutro {
    background:white;
    padding-top: 1em;
}
.forumng-buttons input,
.forumng-selectoutro input {
    margin-right: 10px;
}
.forumng-selectmode .forumng-post {
    background-color:white;
}
.forumng-selectmode .forumng-post.forumng-deselected {
    background-color:transparent;
}

/*
// Edit/reply form within discussion
////////////////////////////////////
*/
#page-mod-forumng-editpost .yui3-panel-hidden div {
    display: none;
}
#page-mod-forumng-discuss .iframecon {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    width: 100%;
}
#page-mod-forumng-discuss iframe.forumng-inlineform {
    border: none;
    overflow-x: auto;
    width: 100%;
}
.forumng-iframe#page-mod-forumng-editpost {
    min-width: inherit;
}
.forumng-iframe#page-mod-forumng-editpost .mform {
    min-width: 580px;
}
.gecko.forumng-iframe#page-mod-forumng-editpost .mform {
    min-width: 605px;
}
.forumng-iframe#page-mod-forumng-editpost fieldset {
    border: none;
    padding: 0;
    margin: 0;
}
.forumng-iframe#page-mod-forumng-editpost textarea {
    width: 99%;
}
.forumng-iframe#page-mod-forumng-editpost {
    padding: 0;
}
.forumng-iframe#page-mod-forumng-editpost .advancedbutton {
    margin: 0;
}
.forumng-iframe#page-mod-forumng-editpost .fcontainer {
    margin-left: 0;
}
.forumng-iframe#page-mod-forumng-editpost .fm-empty-container,
.forumng-iframe#page-mod-forumng-editpost .dndupload-target {
    padding-top: 0;
}
.forumng-iframe#page-mod-forumng-editpost .filemanager-container {
    min-height: 40px;
}
.forumng-iframe#page-mod-forumng-editpost .dndupload-arrow,
#page-mod-forumng-editpost .fp-pathbar,
.forumng-iframe#page-mod-forumng-editpost .fp-pathbar {
    display: none;
}
.forumng-iframe#page-mod-forumng-editpost #fitem_id_message .felement.feditor,
.forumng-iframe#page-mod-forumng-editpost #fitem_id_subject .felement,
.forumng-iframe#page-mod-forumng-editpost #fitem_id_attachments .felement {
    clear: left;
    margin-left: 6em;
}
.forumng-iframe#page-mod-forumng-editpost #fgroup_id_buttonar .felement {
    clear: left;
    margin-left: 5.3em;
}
.forumng-iframe#page-mod-forumng-editpost #fitem_id_subject .fitemtitle,
.forumng-iframe#page-mod-forumng-editpost #fitem_id_message .fitemtitle,
.forumng-iframe#page-mod-forumng-editpost #fitem_id_attachments .fitemtitle {
    margin-left: 6em;
    text-align: left;
}
/* ... */

